--- a/css/contact.css
+++ b/css/contact.css
@@ -32,4 +32,28 @@
     box-shadow: none;
     border: 1px solid #ccc;
   }
+
+#response-message {
+  position: fixed;
+  top: 100px;
+  right: 45%;
+  min-width: 200px;
+  min-height: 50px;
+  background-color: #d4edda; /* Verde deschis pentru succes */
+  color: #155724; /* Verde închis */
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+  padding: 15px;
+  display: none; /* Ascuns implicit */
+  z-index: 1000;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+#response-message.error {
+  background-color: #f8d7da; /* Roșu deschis pentru eroare */
+  color: #721c24; /* Roșu închis */
+  border: 1px solid #f5c6cb;
+}
 /* END SECTIUNEA CONTACT */
